# appic-dex

./: .gitignore  Cargo.toml  LICENSE  README.md  appic_dex.did  architecture.md  canister_ids.json  dfx.json  makefile  pool.md  queries.md  swap.md
.dfx/ic/canisters/appic_dex/: appic_dex.wasm  constructor.did  service.did  service.did.d.ts  service.did.js
.dfx/local/: canister_ids.json
.dfx/local/canisters/appic_dex/: appic_dex.wasm  constructor.did  index.js  service.did.d.ts  service.did.js
.dfx/local/lsp/: by6od-j4aaa-aaaaa-qaadq-cai.did
.dfx/playground/: canister_ids.json  canister_timestamps.json
.dfx/playground/canisters/appic_dex/: appic_dex.wasm  constructor.did  service.did.d.ts  service.did.js
.dfx/playground/lsp/: 7ulr6-faaaa-aaaab-qacwq-cai.did
.github/: dependabot.yml
proptest-regressions/libraries/: tick_bitmap.txt
proptest-regressions/pool/: tests.txt
src/: burn.rs  collect_fees.rs  decrease_liquidity.rs  endpoints.rs  increase_liquidity.rs  lib.rs  logs.rs  main.rs  mint.rs  proxy_canister.rs  quote.rs  swap.rs  validate_candid_args.rs
src/balances/: types.rs
src/candid_types/: events.rs  mod.rs  pool.rs  pool_history.rs  position.rs  quote.rs  swap.rs  tick.rs
src/cbor/: mod.rs  tests.rs
src/events/: mod.rs
src/gaurd/: mod.rs  tests.rs
src/guard/: mod.rs  tests.rs
src/historical/: mod.rs  types.rs
src/icrc_client/: memo.rs  mod.rs
src/libraries/: amount_delta.rs  balance_delta.rs  big_uint_to_u256.rs  bit_math.rs  constants.rs  fee_math.rs  full_math.rs  liquidity_amounts.rs  liquidity_math.rs  mod.rs  path_key.rs  safe_cast.rs  slippage_check.rs  sqrt_price_math.rs  swap_math.rs  tick_bitmap.rs  tick_math.rs
src/pool/: create_pool.rs  mod.rs  modify_liquidity.rs  swap.rs  tests.rs  types.rs
src/position/: mod.rs  types.rs
src/state/: memory_manager.rs  mod.rs  storable_impl.rs
src/tests/: mod.rs  quoter.rs  swap_args_validation.rs
src/tests/integration/: mod.rs  modify_liquidity.rs  modify_liquidty.rs  swap_tests.rs
src/tests/integration/wasm/: appic_dex.wasm  proxy_canister.wasm
src/tick/: mod.rs  tests.rs  types.rs
src/validation/: burn_args.rs  decrease_args.rs  increase_args.rs  mint_args.rs  mod.rs  swap_args.rs
