[package]
name = "appic-dex"
version = "0.1.0"
edition = "2024"

[dependencies]

candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" 
ic-stable-structures="0.6.5"
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic.git" }
icrc-ledger-types={ git = "https://github.com/dfinity/ic.git"}
ic-canister-log = "0.2.0"


hex = { version = "0.4.3", features = ["serde"] }


minicbor = { version = "0.26.3",features = ["derive","alloc"] }

num-bigint = "0.4"
num-traits = "0.2"
ethnum = "1.5.0"
lazy_static = "1.4"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "^1.0.107" }


[dev-dependencies]
proptest="1.4.0"

